--- a/.github/workflows/test_sdk_snippets.yml
+++ b/.github/workflows/test_sdk_snippets.yml
@@ -49,6 +49,7 @@ jobs:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
     strategy:
       fail-fast: false
+      max-parallel: 1   # limit concurrency
       matrix: ${{ fromJson(needs.discover_sdk_snippets.outputs.items) }}
 
     steps:
