--- a/.github/workflows/test_sdk_snippets__staging.yml
+++ b/.github/workflows/test_sdk_snippets__staging.yml
@@ -140,3 +140,62 @@ jobs:
           JSON
           echo "Collected items ✅ (pretty):"
           jq . items.json | tee items.pretty.json
+          
+
+  python: # Job is called `python` so that subjobs are called python(<endpoint>)
+          # to distinguish them from typescript(<endpoint>)
+    needs: [validate-environment, set-versions, discover_sdk_snippets ]
+    if: ${{ needs.discover_sdk_snippets.outputs.items != '' }}
+    runs-on: ubuntu-latest
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      ETHEREUM_RPC_URL: http://localhost:8545
+      SERVER_URL: http://localhost:80
+      NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
+      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
+
+    strategy:
+      fail-fast: false
+      max-parallel: 3   # limit concurrency
+      matrix: ${{ fromJson(needs.discover_sdk_snippets.outputs.items) }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup uv and Python
+        uses: astral-sh/setup-uv@v5
+        with:
+          python-version: "3.12"
+
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+          environment: ${{ needs.validate-environment.outputs.environment }}
+          aws_ecr_sts_role: ${{ env.AWS_ECR_STS_ROLE }}
+          ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
+
+      - name: Install dependencies
+        working-directory: v1/test_sdk_snippets
+        run: |
+          if [[ "$UV_PACKAGE_VERSION" != "latest" ]]; then
+            echo "Installing compass-api-sdk==$UV_PACKAGE_VERSION"
+            uv add compass-api-sdk==$UV_PACKAGE_VERSION
+          fi
+          uv sync
+          uv pip freeze
+
+      - name: Run endpoint snippet
+        working-directory: v1/test_sdk_snippets
+        run: uv run python run_endpoint_python.py
+        env:
+          ENDPOINT: ${{ matrix.item }}
