--- a/.github/workflows/simple_test__staging.yaml
+++ b/.github/workflows/simple_test__staging.yaml
@@ -92,24 +92,55 @@ jobs:
           
   
   test:
+    needs: [validate-environment, set-versions, print-env]
     runs-on: ubuntu-latest
-    needs: print-env
+
+    env:
+      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      ARBITRUM_RPC_URL: http://localhost:8547
+      SERVER_URL: http://localhost:80
+      NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
+      UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Install uv
-        run: pip install uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+          environment: ${{ needs.validate-environment.outputs.environment }}
+          aws_ecr_sts_role: ${{ env.AWS_ECR_STS_ROLE }}
+          ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
+
       - name: Install dependencies
+        working-directory: v1/pendle/python
         run: |
-          cd test
+          if [[ "$UV_PACKAGE_VERSION" != "latest" ]]; then
+            echo "Installing compass-api-sdk==$UV_PACKAGE_VERSION"
+            uv add compass-api-sdk==$UV_PACKAGE_VERSION
+          fi
           uv sync
-      - name: Run test
-        env:
-          COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-        run: |
-          cd test
-          uv run python main.py
+          uv pip freeze
+
+      - name: Run example
+        working-directory: v1/pendle/python
+        run: ./.venv/bin/python src/main.py
+
+
+#        run: |
+#          cd test
+#          uv run python main.py
         
