--- a/.github/workflows/simple_test__staging.yaml
+++ b/.github/workflows/simple_test__staging.yaml
@@ -137,7 +137,7 @@ jobs:
 
       - name: Run example
         working-directory: test
-        run: ./.venv/bin/python src/main.py
+        run: ./.venv/bin/python main.py
 
 
 #        run: |
