--- a/.github/workflows/test_sdk_snippets__production.yml
+++ b/.github/workflows/test_sdk_snippets__production.yml
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-      SERVER_URL: https://api.compasslabs.ai/
+      SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
     strategy:
       fail-fast: false
       max-parallel: 3   # limit concurrency
@@ -78,7 +78,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-      SERVER_URL: https://api.compasslabs.ai/
+      SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
     strategy:
       fail-fast: false
       max-parallel: 3   # limit concurrency
