--- a/.github/workflows/test_sdk_snippets__staging.yml
+++ b/.github/workflows/test_sdk_snippets__staging.yml
@@ -160,7 +160,7 @@ jobs:
 
     strategy:
       fail-fast: false
-      max-parallel: 3   # limit concurrency
+      max-parallel: 30000000   # limit concurrency
       matrix: ${{ fromJson(needs.discover_sdk_snippets.outputs.items) }}
 
     steps:
@@ -220,7 +220,7 @@ jobs:
 
     strategy:
       fail-fast: false
-      max-parallel: 3   # limit concurrency
+      max-parallel: 300000000   # limit concurrency
       matrix: ${{ fromJson(needs.discover_sdk_snippets.outputs.items) }}
 
     steps:
