--- a/.github/workflows/test_sdk_snippets__staging.yml
+++ b/.github/workflows/test_sdk_snippets__staging.yml
@@ -151,8 +151,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      ETHEREUM_RPC_URL: http://localhost:8545
+      #PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      #ETHEREUM_RPC_URL: http://localhost:8545
       #SERVER_URL: http://localhost:80
       SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
       NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
@@ -172,20 +172,20 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Start up full local API and anvil
-        uses: ./.github/actions/local_anvil_and_api
-        id: local_anvil_and_api
-        with:
-          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
-          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
-          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
-          private_key: ${{ secrets.PRIVATE_KEY }}
-          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
-          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
-          fund_amount_eth: "10"
-          environment: ${{ needs.validate-environment.outputs.environment }}
-          aws_ecr_sts_role: ${{ env.AWS_ECR_STS_ROLE }}
-          ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
+#      - name: Start up full local API and anvil
+#        uses: ./.github/actions/local_anvil_and_api
+#        id: local_anvil_and_api
+#        with:
+#          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+#          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+#          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+#          #private_key: ${{ secrets.PRIVATE_KEY }}
+#          #mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+#          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+#          fund_amount_eth: "10"
+#          environment: ${{ needs.validate-environment.outputs.environment }}
+#          aws_ecr_sts_role: ${{ env.AWS_ECR_STS_ROLE }}
+#          ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
 
       - name: Install dependencies
         working-directory: v1/test_sdk_snippets
@@ -210,8 +210,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      ETHEREUM_RPC_URL: http://localhost:8545
+      #PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      #ETHEREUM_RPC_URL: http://localhost:8545
       #SERVER_URL: http://localhost:80
       SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
 
