--- a/.github/workflows/test_sdk_snippets__staging_api__rc_snippets.yml
+++ b/.github/workflows/test_sdk_snippets__staging_api__rc_snippets.yml
@@ -103,7 +103,7 @@ jobs:
       #SERVER_URL: http://localhost:80 # local server
       SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
 
-      BASE_RPC_URL: http://localhost:8546
+#      BASE_RPC_URL: http://localhost:8546
       NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
       UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
 
