--- a/.github/workflows/test_sdk_snippets__staging_api_with_production_snippets.yml
+++ b/.github/workflows/test_sdk_snippets__staging_api_with_production_snippets.yml
@@ -51,7 +51,7 @@ jobs:
       SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
     strategy:
       fail-fast: false
-      #max-parallel: 30000000   # limit concurrency
+      #max-parallel: 3   # limit concurrency
       matrix: ${{ fromJson(needs.discover_sdk_snippets.outputs.items) }}
 
     steps:
@@ -82,7 +82,7 @@ jobs:
       SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
     strategy:
       fail-fast: false
-      #max-parallel: 30000000   # limit concurrency
+      #max-parallel: 3   # limit concurrency
       matrix: ${{ fromJson(needs.discover_sdk_snippets.outputs.items) }}
 
     steps:
