--- a/.github/workflows/test_sdk_snippets__staging_api__rc_snippets.yml
+++ b/.github/workflows/test_sdk_snippets__staging_api__rc_snippets.yml
@@ -174,7 +174,7 @@ jobs:
 
     strategy:
       fail-fast: false
-      #max-parallel: 30000000   # limit concurrency
+      #max-parallel: 3   # limit concurrency
       matrix: ${{ fromJson(needs.discover_sdk_snippets.outputs.items) }}
 
     steps:
@@ -234,7 +234,7 @@ jobs:
 
     strategy:
       fail-fast: false
-      #max-parallel: 300000000   # limit concurrency
+      #max-parallel: 3   # limit concurrency
       matrix: ${{ fromJson(needs.discover_sdk_snippets.outputs.items) }}
 
     steps:
