--- a/.github/workflows/test_production_snippets___staging_api_server___latest_sdk.yml
+++ b/.github/workflows/test_production_snippets___staging_api_server___latest_sdk.yml
@@ -111,6 +111,10 @@ jobs:
           # Install the TS SDK used by snippets
           npm i @compass-labs/api-sdk
 
+      - name: List installed @compass-labs/api-sdk
+        working-directory: v1/test_sdk_snippets
+        run: npm ls @compass-labs/api-sdk || true
+
       - name: Run endpoint snippet
         working-directory: v1/test_sdk_snippets
         run: uv run python run_endpoint_typescript.py
