--- a/.github/workflows/test_production_snippets___staging_api_server___release_candidate_sdk.yml
+++ b/.github/workflows/test_production_snippets___staging_api_server___release_candidate_sdk.yml
@@ -100,10 +100,9 @@ jobs:
 
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
-      #SERVER_URL: http://localhost:80 # local server
-      SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
+      #SERVER_URL: https://api.compasslabs.ai/ # production server
+      SERVER_URL: ${{ secrets.STAGING_SERVER_URL }}
 
-#      BASE_RPC_URL: http://localhost:8546
       NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
       UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
 
@@ -118,21 +117,6 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           python-version: "3.12"
-
-#      - name: Start up full local API and anvil
-#        uses: ./.github/actions/local_anvil_and_api
-#        id: local_anvil_and_api
-#        with:
-#          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
-#          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
-#          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
-#          private_key: ${{ secrets.PRIVATE_KEY }}
-#          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
-#          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
-#          fund_amount_eth: "10"
-#          environment: ${{ needs.validate-environment.outputs.environment }}
-#          aws_ecr_sts_role: ${{ env.AWS_ECR_STS_ROLE }}
-#          ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
 
       - name: Install dependencies
         working-directory: v1/test_sdk_snippets
