--- a/.github/workflows/test_production_snippets___staging_api_server___release_candidate_sdk.yml
+++ b/.github/workflows/test_production_snippets___staging_api_server___release_candidate_sdk.yml
@@ -118,15 +118,15 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install dependencies
-        working-directory: v1/test_sdk_snippets
-        run: |
-          if [[ "$UV_PACKAGE_VERSION" != "latest" ]]; then
-            echo "Installing compass-api-sdk==$UV_PACKAGE_VERSION"
-            uv add compass-api-sdk==$UV_PACKAGE_VERSION
-          fi
-          uv sync
-          uv pip freeze
+      # - name: Install dependencies
+      #   working-directory: v1/test_sdk_snippets
+      #   run: |
+      #     if [[ "$UV_PACKAGE_VERSION" != "latest" ]]; then
+      #       echo "Installing compass-api-sdk==$UV_PACKAGE_VERSION"
+      #       uv add compass-api-sdk==$UV_PACKAGE_VERSION
+      #     fi
+      #     uv sync
+      #     uv pip freeze
 
       - id: collect
         name: Collect endpoints (writes items=... to $GITHUB_OUTPUT)
