--- a/.github/workflows/test_production_snippets___staging_api_server___release_candidate_sdk.yml
+++ b/.github/workflows/test_production_snippets___staging_api_server___release_candidate_sdk.yml
@@ -94,7 +94,7 @@ jobs:
 
 
   discover_sdk_snippets:
-    needs: [validate-environment, set-versions]
+    #needs: [validate-environment, set-versions]
 
     runs-on: ubuntu-latest
 
