--- a/.github/workflows/test_production_snippets___staging_api_server___release_candidate_sdk.yml
+++ b/.github/workflows/test_production_snippets___staging_api_server___release_candidate_sdk.yml
@@ -122,8 +122,8 @@ jobs:
           jq . items.json | tee items.pretty.json
           
 
-  python: # Job is called `python` so that subjobs are called python(<endpoint>)
-          # to distinguish them from typescript(<endpoint>)
+  python: # Job is called `python` so that subjobs are called `python(<endpoint>)`
+          # to distinguish them from `typescript(<endpoint>)`
     needs: [validate-environment, set-versions, discover_sdk_snippets ]
     if: ${{ needs.discover_sdk_snippets.outputs.items != '' }}
     runs-on: ubuntu-latest
@@ -157,6 +157,10 @@ jobs:
           fi
           uv sync
           uv pip freeze
+
+      - name: Print pyproject.toml after installing dependencies
+        working-directory: v1/test_sdk_snippets
+        run: cat pyproject.toml          
 
       - name: Run endpoint snippet
         working-directory: v1/test_sdk_snippets
