--- a/.github/workflows/test_production_snippets___staging_api_server___latest_sdk.yml
+++ b/.github/workflows/test_production_snippets___staging_api_server___latest_sdk.yml
@@ -67,6 +67,10 @@ jobs:
         working-directory: v1/test_sdk_snippets
         run: uv sync
 
+      - name: Print pyproject.toml after installing dependencies
+        working-directory: v1/test_sdk_snippets
+        run: cat pyproject.toml
+
       - name: Run endpoint snippet
         working-directory: v1/test_sdk_snippets
         run: uv run python run_endpoint_python.py
