--- a/.github/workflows/test_production_snippets___staging_api_server___latest_sdk.yml
+++ b/.github/workflows/test_production_snippets___staging_api_server___latest_sdk.yml
@@ -67,9 +67,13 @@ jobs:
         working-directory: v1/test_sdk_snippets
         run: uv sync
 
+      - name: Print compass-api-sdk version (uv)
+        working-directory: v1/test_sdk_snippets
+        run: uv pip freeze | grep -i '^compass-api-sdk' || echo "compass-api-sdk not installed"
+
       - name: Print pyproject.toml after installing dependencies
         working-directory: v1/test_sdk_snippets
-        run: cat pyproject.toml
+        run: cat pyproject.toml    
 
       - name: Run endpoint snippet
         working-directory: v1/test_sdk_snippets
