--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - main
-      - fix-failing-tests
+#      - fix-failing-tests
   workflow_dispatch:
     inputs:
       environment:
