--- a/.github/workflows/test_usecases_v0.yml
+++ b/.github/workflows/test_usecases_v0.yml
@@ -4,9 +4,9 @@ on:
   schedule:
     # Runs at 00:00 UTC every day
     - cron: "0 0 * * *"
-  pull_request:
-     branches:
-       - main
+#  pull_request:
+#     branches:
+#       - main
   workflow_dispatch:
 
 permissions:
