--- a/.github/workflows/EXPERIMENT.yml
+++ b/.github/workflows/EXPERIMENT.yml
@@ -90,9 +90,10 @@ jobs:
       PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
       BASE_RPC_URL: http://localhost:8546
       #SERVER_URL: http://localhost:80
-      SERVER_URL: https://dev-api.compasslabs.ai # uncomment this to test against staging api
+      SERVER_URL: https://api.compasslabs.ai # uncomment this to test against staging api
       NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
       UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
+      #API_KEY:
 
     steps:
       - name: Checkout repository
