--- a/.github/workflows/EXPERIMENT.yml
+++ b/.github/workflows/EXPERIMENT.yml
@@ -88,7 +88,8 @@ jobs:
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
       PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      BASE_RPC_URL: http://localhost:8546
+      #BASE_RPC_URL: http://localhost:8546
+      BASE_RPC_URL: ${{ secrets.BASE_MAINNET_RPC_URL }}
       #SERVER_URL: http://localhost:80
       SERVER_URL: https://api.compasslabs.ai # uncomment this to test against staging api
       NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
