--- a/.github/workflows/EXPERIMENT.yml
+++ b/.github/workflows/EXPERIMENT.yml
@@ -57,6 +57,8 @@ jobs:
       npm_package_version: ${{ steps.set-versions.outputs.npm_package_version }}
       uv_package_version: ${{ steps.set-versions.outputs.uv_package_version }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
