--- a/.github/workflows/EXPERIMENT.yml
+++ b/.github/workflows/EXPERIMENT.yml
@@ -88,10 +88,10 @@ jobs:
     env:
       COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
       PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      #BASE_RPC_URL: http://localhost:8546
-      BASE_RPC_URL: ${{ secrets.BASE_MAINNET_RPC_URL }}
-      #SERVER_URL: http://localhost:80
-      SERVER_URL: https://api.compasslabs.ai # uncomment this to test against staging api
+      BASE_RPC_URL: http://localhost:8546
+      #BASE_RPC_URL: ${{ secrets.BASE_MAINNET_RPC_URL }}
+      SERVER_URL: http://localhost:80
+      #SERVER_URL: https://api.compasslabs.ai # uncomment this to test against staging api
       NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
       UV_PACKAGE_VERSION: ${{ needs.set-versions.outputs.uv_package_version }}
       #API_KEY:
@@ -103,20 +103,20 @@ jobs:
       - name: Install uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
 
-#      - name: Start up full local API and anvil
-#        uses: ./.github/actions/local_anvil_and_api
-#        id: local_anvil_and_api
-#        with:
-#          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
-#          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
-#          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
-#          private_key: ${{ secrets.PRIVATE_KEY }}
-#          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
-#          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
-#          fund_amount_eth: "10"
-#          environment: ${{ needs.validate-environment.outputs.environment }}
-#          aws_ecr_sts_role: ${{ env.AWS_ECR_STS_ROLE }}
-#          ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
+      - name: Start up full local API and anvil
+        uses: ./.github/actions/local_anvil_and_api
+        id: local_anvil_and_api
+        with:
+          ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
+          arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
+          base_rpc_url: ${{ secrets.BASE_MAINNET_RPC_URL }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+          mono_app_id: ${{ secrets.MONOREPOAPP_ID }}
+          mono_app_private_key: ${{ secrets.MONOREPOAPP_PRIVATE_KEY }}
+          fund_amount_eth: "10"
+          environment: ${{ needs.validate-environment.outputs.environment }}
+          aws_ecr_sts_role: ${{ env.AWS_ECR_STS_ROLE }}
+          ecr_image_uri: 688567264391.dkr.ecr.eu-west-2.amazonaws.com/dojo_api
 
       - name: Install dependencies
         working-directory: v1/basic_examples/deposit_on_morpho/python
