--- a/.github/workflows/EXPERIMENT.yml
+++ b/.github/workflows/EXPERIMENT.yml
@@ -139,7 +139,8 @@ jobs:
           uv pip freeze
 
       - name: Show pyproject.toml
-        run: cat /Users/johncosnett/PycharmProjects/api_usecases/v1/basic_examples/deposit_on_morpho/python/pyproject.toml
+        working-directory: v1/basic_examples/deposit_on_morpho/python
+        run: cat pyproject.toml
 
       - name: Run example
         working-directory: v1/basic_examples/deposit_on_morpho/python
