--- a/.github/workflows/OLD_ACTION.yml
+++ b/.github/workflows/OLD_ACTION.yml
@@ -114,8 +114,8 @@ jobs:
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
 
       - name: Start up full local API and anvil
-        uses: ./.github/actions/local_anvil_and_api
-        id: local_anvil_and_api
+        uses: ./.github/actions/old_anvil_and_api
+        id: old_anvil_and_api
         with:
           ethereum_rpc_url: ${{ secrets.ETHEREUM_MAINNET_RPC_URL }}
           arbitrum_rpc_url: ${{ secrets.ARBITRUM_MAINNET_RPC_URL }}
