--- a/.github/workflows/OLD_ACTION.yml
+++ b/.github/workflows/OLD_ACTION.yml
@@ -15,10 +15,7 @@ on:
         required: true
         type: string
 
-  # ✅ Cancel previous runs on same branch or PR when a new run starts
-  concurrency:
-    group: ${{ github.workflow }}-${{ github.ref }}
-    cancel-in-progress: true
+
 
   workflow_call:
     inputs:
@@ -26,6 +23,11 @@ on:
         description: "Environment to test"
         required: true
         type: string
+
+#  # ✅ Cancel previous runs on same branch or PR when a new run starts
+#  concurrency:
+#    group: ${{ github.workflow }}-${{ github.ref }}
+#    cancel-in-progress: true
 
 permissions:
   id-token: write
