--- a/v1/basic_examples/deposit_on_morpho/python/pyproject.toml
+++ b/v1/basic_examples/deposit_on_morpho/python/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "compass-api-sdk",
+    "compass-api-sdk==1.1.5rc0",
     "devtools",
     "dotenv",
     "web3",
