--- a/.github/workflows/test_prod_snippets___staging_api_server___latest_sdk.yml
+++ b/.github/workflows/test_prod_snippets___staging_api_server___latest_sdk.yml
@@ -15,7 +15,7 @@ jobs:
   discover_sdk_snippets:
     runs-on: ubuntu-latest
     env:
-      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      COMPASS_API_KEY: ${{ secrets.STAGING_COMPASS_API_KEY }}
 
     outputs:
       items: ${{ steps.collect.outputs.items }}
@@ -51,7 +51,7 @@ jobs:
     if: ${{ needs.discover_sdk_snippets.outputs.items != '' }}
     runs-on: ubuntu-latest
     env:
-      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      COMPASS_API_KEY: ${{ secrets.STAGING_COMPASS_API_KEY }}
       SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
 
     strategy:
@@ -91,7 +91,7 @@ jobs:
     if: ${{ needs.discover_sdk_snippets.outputs.items != '' }}
     runs-on: ubuntu-latest
     env:
-      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      COMPASS_API_KEY: ${{ secrets.STAGING_COMPASS_API_KEY }}
       SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
     strategy:
       fail-fast: false
