--- a/.github/workflows/test_prod_snippets___staging_api_server___release_candidate_sdk.yml
+++ b/.github/workflows/test_prod_snippets___staging_api_server___release_candidate_sdk.yml
@@ -128,7 +128,7 @@ jobs:
     if: ${{ needs.discover_sdk_snippets.outputs.items != '' }}
     runs-on: ubuntu-latest
     env:
-      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      COMPASS_API_KEY: ${{ secrets.STAGING_COMPASS_API_KEY }}
       #SERVER_URL: https://api.compasslabs.ai/ # production server
       SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} 
       NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
@@ -178,7 +178,7 @@ jobs:
     if: ${{ needs.discover_sdk_snippets.outputs.items != '' }}
     runs-on: ubuntu-latest
     env:
-      COMPASS_API_KEY: ${{ secrets.COMPASS_API_KEY }}
+      COMPASS_API_KEY: ${{ secrets.STAGING_COMPASS_API_KEY }}
       SERVER_URL: ${{ secrets.STAGING_SERVER_URL }} #https://api.compasslabs.ai/
 
       NPM_PACKAGE_VERSION: ${{ needs.set-versions.outputs.npm_package_version }}
