--- a/v1/basic_examples/deposit_on_morpho/typescript/package.json
+++ b/v1/basic_examples/deposit_on_morpho/typescript/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@compass-labs/api-sdk": "^1.0.26",
+    "@compass-labs/api-sdk": "^1.1.2",
+    "@safe-global/protocol-kit": "^6.0.4",
+    "@safe-global/sdk-starter-kit": "^2.0.2",
     "dotenv": "^16.5.0",
     "viem": "^2.31.0"
   },
