--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -34,6 +34,12 @@ jobs:
     outputs:
       environment: ${{ steps.validate.outputs.environment }}
     steps:
+      - name: Test AllQuiet webhook
+        run: |
+          curl -X POST "https://allquiet.app/api/webhook/829f846c-4dfa-4a58-ab33-eafae34a57c9" \
+              -H "Content-Type: application/json" \
+              -d '{"status": "Open", "severity": "Critical", "message": "GitHub workflow test ping", "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"}'
+
       - name: Validate environment input
         id: validate
         run: |
