--- a/.github/workflows/test_usecases_v1.yml
+++ b/.github/workflows/test_usecases_v1.yml
@@ -134,7 +134,7 @@ jobs:
         run: npm run start
 
   run-pendle-python:
-    needs: [validate-environment, set-versions, run-pendle-typescript]
+    needs: [validate-environment, set-versions]
     
     runs-on: ubuntu-latest
     env:
