--- a/wallet-earn/package.json
+++ b/wallet-earn/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@compass-labs/api-sdk": "^2.0.1",
+    "@compass-labs/api-sdk": "1.3.5",
     "@geist-ui/core": "^2.3.8",
     "@radix-ui/react-slider": "^1.3.6",
     "@vercel/analytics": "^1.5.0",
