--- a/v2/create_earn_account/typescript/.env.example
+++ b/v2/create_earn_account/typescript/.env.example
@@ -4,3 +4,7 @@ COMPASS_API_KEY=your_compass_api_key_here
 # Wallet Configuration
 # The wallet address that will own the Earn Account and pay for gas
 WALLET_ADDRESS=0xYourWalletAddress
+PRIVATE_KEY=your_wallet_private_key_here
+
+# Base RPC Configuration
+BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/your-api-key
