--- a/v2/fund_earn_account/typescript/package.json
+++ b/v2/fund_earn_account/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create_earn_account_typescript_example",
+  "name": "fund_earn_account_typescript_example",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
@@ -10,9 +10,9 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "Example: Create an Earn Account using Compass API",
+  "description": "Example: Fund Earn Account (Transfer USDC) using Compass API",
   "dependencies": {
-    "@compass-labs/api-sdk": "^1.0.26",
+    "@compass-labs/api-sdk": "^1.3.5",
     "dotenv": "^16.5.0",
     "viem": "^2.31.0"
   },
