--- a/wallet-earn/package.json
+++ b/wallet-earn/package.json
@@ -33,5 +33,8 @@
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "ox": "0.9.6"
   }
 }
