Examples for docs & add sign and broadcast transaction (#83)
* Add manage earn position example (deposit into Morpho vault)

- Add TypeScript and Python examples for depositing into Morpho vault
- Includes signing and broadcasting transactions
- Add position checking to list all Earn Account positions
- Deposit 0.5 USDC into Steakhouse USDC vault (0xbeeF010f9cb27031ad51e3333f9aF9C6B1228183)
- Tested and working on Base network

* Add fund earn account example and update create earn account with sign and broadcast

---------

Co-authored-by: Elisabeth Duijnstee <elisabethduijnstee@elisabeths-air.home>

--- a/v2/manage_earn_position/python/.env.example
+++ b/v2/manage_earn_position/python/.env.example
@@ -2,7 +2,7 @@
 COMPASS_API_KEY=your_compass_api_key_here
 
 # Wallet Configuration
-# The wallet address that will own the Earn Account and pay for gas
+# The wallet address that owns the Earn Account
 WALLET_ADDRESS=0xYourWalletAddress
 PRIVATE_KEY=your_wallet_private_key_here
 
