--- a/v2/manage_earn_position/typescript/.env.example
+++ b/v2/manage_earn_position/typescript/.env.example
@@ -2,7 +2,7 @@
 COMPASS_API_KEY=your_compass_api_key_here
 
 # Wallet Configuration
-# The wallet address that will own the Earn Account and pay for gas
+# The wallet address that owns the Earn Account
 WALLET_ADDRESS=0xYourWalletAddress
 PRIVATE_KEY=your_wallet_private_key_here
 
