--- a/wallet-earn/package.json
+++ b/wallet-earn/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@compass-labs/api-sdk": "2.1.8",
+    "@compass-labs/api-sdk": "2.1.15-rc.1",
     "@geist-ui/core": "^2.3.8",
     "@privy-io/react-auth": "^3.8.0",
     "@radix-ui/react-slider": "^1.3.6",
